# Python_Web_07

./: .gitignore  main.py  my_select.py  pyproject.toml
alembic/: env.py
connect/: connect.py
models/: models.py
seeds/: create_data.py
